# dealpathMCP

./: .deploy_env  .gitignore  AGENTS.md  README.md  dealpath-remote.mcpb  dealpathapi.yml  pyproject.toml  requirements-dev.txt  requirements.txt
bundle/dealpath-remote/: README.md  manifest.json
scripts/: make_mcpb.sh
src/: dealpath_client.py  main.py  mcp_server.py  openapi_tools.py
tests/: conftest.py  test_auth_and_sessions.py  test_get_deal_tool.py  test_mcp_basic_tools.py  test_mcp_http.py  test_mcp_search_and_resources.py
